--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                         <img src="assets/img/plate1.png" alt="" class="menu__img">
                         <h3 class="menu__name">Barbecue salad</h3>
                         <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$22.00</span>
+                        <span class="menu__preci">₹1,800</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
 
@@ -375,7 +375,7 @@
                         <img src="assets/img/plate2.png" alt="" class="menu__img">
                         <h3 class="menu__name">Salad with fish</h3>
                         <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$12.00</span>
+                        <span class="menu__preci">₹990</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                     
@@ -383,7 +383,7 @@
                         <img src="assets/img/plate3.png" alt="" class="menu__img">
                         <h3 class="menu__name">Spinach salad</h3>
                         <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$9.50</span>
+                        <span class="menu__preci">₹784</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
                 </div>
@@ -458,15 +458,14 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Adress</h3>
                     <ul>
-                        <li>Lima - Peru</li>
-                        <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
+                        <li> - Bengaluru KA</li>
+                        <li>111 - 222 - 333</li>
                         <li>tastyfood@email.com</li>
                     </ul>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2020 Bedimcode. All right reserved</p>
+            <p class="footer__copy">&#169; Gagana Gopal </p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
