--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Adress</h3>
+                    <h3 class="footer__title">Address</h3>
                     <ul>
                         <li> - Bengaluru KA</li>
                         <li>111 - 222 - 333</li>
